--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="artist-image" style="background-image: url('https://i.pinimg.com/736x/14/9d/fc/149dfcbb0237ea7170fd4bf996377688.jpg')">
                             <div class="artist-overlay d-flex align-items-end">
                                 <div class="p-3">
-                                    <a href="Artistas/oneus.html" class="btn btn-sm btn-light me-2">
+                                    <a href="grupos/oneus/oneus.html" class="btn btn-sm btn-light me-2">
                                         <i class="bi bi-play-fill"></i> Videos
                                     </a>
                                     <button class="btn btn-sm btn-light">
@@ -76,7 +76,7 @@
                         <div class="artist-image" style="background-image: url('https://i.pinimg.com/736x/e3/ff/9e/e3ff9e097de8337dda3604cccf8b7507.jpg')">
                             <div class="artist-overlay d-flex align-items-end">
                                <div class="p-3">
-                                    <a href="../Artistas/Bts.html" class="btn btn-sm btn-light me-2">
+                                    <a href="grupos/idle/ide.html" class="btn btn-sm btn-light me-2">
                                         <i class="bi bi-play-fill"></i> Videos
                                     </a>
                                     <button class="btn btn-sm btn-light">
@@ -128,7 +128,7 @@
                         <div class="artist-image" style="background-image: url('https://i.pinimg.com/736x/2e/84/79/2e8479ee3c27b597309dce62e149df0e.jpg')">
                             <div class="artist-overlay d-flex align-items-end">
                                 <div class="p-3">
-                                    <a href="../Artistas/Bts.html" class="btn btn-sm btn-light me-2">
+                                    <a href="grupos/ive/ive.html" class="btn btn-sm btn-light me-2">
                                         <i class="bi bi-play-fill"></i> Videos
                                     </a>
                                     <button class="btn btn-sm btn-light">
