--- a/grupos/KARD/kard.html
+++ b/grupos/KARD/kard.html
@@ -251,7 +251,7 @@
 
     <script>
         const API_KEY = 'AIzaSyBBGvojmSSMxAMnEJgeoTFlaeniInE4OC4';
-        const PLAYLIST_ID = 'PLWEw-iUFFXg3cqfyYlkqpCC92krSsprDM&si=npNa7XWxI_JJbFOB';
+        const PLAYLIST_ID = 'PLWEw-iUFFXg1nWG0rONbCoas2tVbmgwBv&si=ZR6UO8bnw4Mx0zHK';
         const ITEMS_PER_PAGE = 20;
         
         let allVideos = [];
